/**
 * The configuatioon service.
 */

syntax = "proto3";
package config;

option go_package="config/configpb";

/** Set the service configuration */
message SetServiceConfigurationRequest {
	string config = 1; // Can be a struct
}

message SetServiceConfigurationResponse {

}

/** Return a service configuration by it id */
message GetServiceConfigurationRequest {
	string path= 1;
}

message GetServiceConfigurationResponse {
	string config = 1;
}


/** Return a service configuration by it id */
message GetServiceConfigurationByIdRequest {
	string id= 1;
}

message GetServiceConfigurationByIdResponse {
	string config = 1;
}

/** Return the list of configuration for services with given names */
message GetServicesConfigurationsByNameRequest {
	string name=1;
}

message GetServicesConfigurationsByNameResponse {
	repeated string configs = 1;
}

/** Return the list of all service configurations **/
message GetServicesConfigurationsRequest {
	/** Nothing here */
}

message GetServicesConfigurationsResponse {
	repeated string configs = 1;
}

// The configuration service
service ConfigService {
	
	// Set a service configuration.
	rpc SetServiceConfiguration(SetServiceConfigurationRequest) returns (SetServiceConfigurationResponse){};
  	
	// Get the configuration at a given path on the server.
	rpc GetServiceConfiguration(GetServiceConfigurationRequest) returns (GetServiceConfigurationResponse) {};

	// Get service configuration with a given id.
	rpc GetServiceConfigurationById(GetServiceConfigurationByIdRequest) returns(GetServiceConfigurationByIdResponse){};

	// Get list of service configuration with a given name
	rpc GetServicesConfigurationsByName(GetServicesConfigurationsByNameRequest) returns(GetServicesConfigurationsByNameResponse){};

	// Get the list of all services configurations
	rpc GetServicesConfigurations(GetServicesConfigurationsRequest) returns (GetServicesConfigurationsResponse) {};
}